WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287492
REGRESSION(
290200@main
): [ macOS Debug ] TestWebKitAPI.ProcessSwap.ConcurrentHistoryNavigations (api-test) is a constant timeout
https://bugs.webkit.org/show_bug.cgi?id=287492
Summary
REGRESSION(290200@main): [ macOS Debug ] TestWebKitAPI.ProcessSwap.Concurrent...
Dawn Morningstar
Reported
2025-02-11 10:41:29 PST
TestWebKitAPI.ProcessSwap.ConcurrentHistoryNavigations is a constant timeout after
290200@main
History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.ProcessSwap.ConcurrentHistoryNavigations
Test-run:
https://build.webkit.org/#/builders/1226/builds/776
STDIO:
https://build.webkit.org/#/builders/1226/builds/776/steps/19/logs/stdio
TIMEOUT: TestWebKitAPI.ProcessSwap.ConcurrentHistoryNavigations 2025-02-11 08:44:24.421 TestWebKitAPI[48484:2397475] +[IMKClient subclass]: chose IMKClient_Modern ASSERTION FAILED: !m_pendingNavigationID /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WebKit/WebProcess/WebPage/WebPage.cpp(2368) : void WebKit::WebPage::goToBackForwardItem(GoToBackForwardItemParameters &&) 1 0x12fcd84a8 WebKit::WebPage::goToBackForwardItem(WebKit::GoToBackForwardItemParameters&&) 2 0x12d8d9764 auto void IPC::callMemberFunction<WebKit::WebPage, WebKit::WebPage, void (WebKit::GoToBackForwardItemParameters&&), std::__1::tuple<WebKit::GoToBackForwardItemParameters>>(WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::GoToBackForwardItemParameters&&), std::__1::tuple<WebKit::GoToBackForwardItemParameters>&&)::'lambda'(auto&&...)::operator()<WebKit::GoToBackForwardItemParameters>(auto&&...) const 3 0x12d8d96a8 decltype(std::declval<WebKit::WebPage>()(std::declval<WebKit::GoToBackForwardItemParameters>())) std::__1::__invoke[abi:sn180100]<void IPC::callMemberFunction<WebKit::WebPage, WebKit::WebPage, void (WebKit::GoToBackForwardItemParameters&&), std::__1::tuple<WebKit::GoToBackForwardItemParameters>>(WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::GoToBackForwardItemParameters&&), std::__1::tuple<WebKit::GoToBackForwardItemParameters>&&)::'lambda'(auto&&...), WebKit::GoToBackForwardItemParameters>(WebKit::WebPage&&, WebKit::GoToBackForwardItemParameters&&) 4 0x12d8d967c decltype(auto) std::__1::__apply_tuple_impl[abi:sn180100]<void IPC::callMemberFunction<WebKit::WebPage, WebKit::WebPage, void (WebKit::GoToBackForwardItemParameters&&), std::__1::tuple<WebKit::GoToBackForwardItemParameters>>(WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::GoToBackForwardItemParameters&&), std::__1::tuple<WebKit::GoToBackForwardItemParameters>&&)::'lambda'(auto&&...), std::__1::tuple<WebKit::GoToBackForwardItemParameters>, 0ul>(WebKit::WebPage&&, WebKit::WebPage&&, std::__1::__tuple_indices<0ul>) 5 0x12d8d9640 decltype(auto) std::__1::apply[abi:sn180100]<void IPC::callMemberFunction<WebKit::WebPage, WebKit::WebPage, void (WebKit::GoToBackForwardItemParameters&&), std::__1::tuple<WebKit::GoToBackForwardItemParameters>>(WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::GoToBackForwardItemParameters&&), std::__1::tuple<WebKit::GoToBackForwardItemParameters>&&)::'lambda'(auto&&...), std::__1::tuple<WebKit::GoToBackForwardItemParameters>>(WebKit::WebPage&&, WebKit::WebPage&&) 6 0x12d8d8b50 void IPC::callMemberFunction<WebKit::WebPage, WebKit::WebPage, void (WebKit::GoToBackForwardItemParameters&&), std::__1::tuple<WebKit::GoToBackForwardItemParameters>>(WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::GoToBackForwardItemParameters&&), std::__1::tuple<WebKit::GoToBackForwardItemParameters>&&) 7 0x12d8325b0 void IPC::handleMessage<Messages::WebPage::GoToBackForwardItem, IPC::Connection, WebKit::WebPage, WebKit::WebPage, void (WebKit::GoToBackForwardItemParameters&&)>(IPC::Connection&, IPC::Decoder&, WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::GoToBackForwardItemParameters&&)) 8 0x12d829024 WebKit::WebPage::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 9 0x1303e1c0c IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 10 0x12e8b1cf8 WebKit::AuxiliaryProcess::dispatchMessage(IPC::Connection&, IPC::Decoder&) 11 0x12cf40674 WebKit::AuxiliaryProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 12 0x12dbcb098 WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 13 0x1303aac7c IPC::Connection::dispatchMessage(IPC::Decoder&) 14 0x1303ab0d8 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 15 0x1303ab478 IPC::Connection::dispatchOneIncomingMessage() 16 0x1303d119c IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_2::operator()() const 17 0x1303d10f8 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_2, void>::call() 18 0x103ff906c WTF::Function<void ()>::operator()() const 19 0x1040c4268 WTF::RunLoop::performWork() 20 0x1040c864c WTF::RunLoop::performWork(void*) 21 0x18c9648a4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 22 0x18c964838 __CFRunLoopDoSource0 23 0x18c96459c __CFRunLoopDoSources0 24 0x18c963138 __CFRunLoopRun 25 0x18c962734 CFRunLoopRunSpecific 26 0x18db33518 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 27 0x18dbaae74 -[NSRunLoop(NSRunLoop) run] 28 0x18c59562c _xpc_objc_main 29 0x18c5a5754 _xpc_main 30 0x18c5951c8 _xpc_copy_xpcservice_dictionary 31 0x12d4eb034 WebKit::XPCServiceMain(int, char const**)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-11 10:42:10 PST
<
rdar://problem/144626869
>
Brady Eidson
Comment 2
2025-02-13 10:08:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40562
EWS
Comment 3
2025-02-13 10:29:23 PST
Committed
290348@main
(a9ac1cf0b8d2): <
https://commits.webkit.org/290348@main
> Reviewed commits have been landed. Closing PR #40562 and removing active labels.
EWS
Comment 4
2025-02-18 16:27:22 PST
Committed
289651.139@safari-7621-branch
(eb3d18ed1689): <
https://commits.webkit.org/289651.139@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2632 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug