TestWebKitAPI.ProcessSwap.ConcurrentHistoryNavigations (api-test) is a constant timeout in Debug. https://bugs.webkit.org/show_bug.cgi?id=287492 rdar://144626869

Reviewed by Basuke Suzuki.

This 10+ year old assertion made sense when WK2 didn't do policy checks on back/forward navigations.
It is now invalid.
The test behaves as expected with it.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::goToBackForwardItem):

Canonical link: https://commits.webkit.org/290348@main